(env
 (_
  (flags
   (:standard -w -32-69))))

(executables
 (names test_runtime_events)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (libraries runtime_events)
 (modes js))

(rule
 (alias runtest)
 (deps test_runtime_events.bc.js)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (action
  (run node --experimental-wasm-stringref --experimental-wasm-gc --experimental-wasm-stack-switching ./test_runtime_events.bc.js)))
