(executables
 (names test_toplevel)
 (enabled_if
  (and
   (<> %{profile} wasm)
   (<> %{profile} wasm-effects)))
 (libraries js_of_ocaml-compiler.dynlink compiler-libs.toplevel)
 (flags
  (:standard -linkall))
 (modes byte))

(rule
 (targets test_toplevel.js)
 (enabled_if
  (and
   (<> %{profile} wasm)
   (<> %{profile} wasm-effects)))
 (action
  (run %{bin:js_of_ocaml} --toplevel %{dep:test_toplevel.bc} -o %{targets})))

(rule
 (target test_toplevel.actual)
 (enabled_if
  (and
   (<> %{profile} wasm)
   (<> %{profile} wasm-effects)))
 (deps test_toplevel.js)
 (action
  (with-stdout-to
   %{target}
   (run node ./test_toplevel.js))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (<> %{profile} wasm)
   (<> %{profile} wasm-effects)))
 (deps test_toplevel.expected test_toplevel.actual)
 (action
  (diff test_toplevel.expected test_toplevel.actual)))
