(library
 (name wasm_of_ocaml_compiler)
 (public_name wasm_of_ocaml-compiler)
 (synopsis "Wasm_of_ocaml compiler library")
 (libraries
  js_of_ocaml_compiler
  (select
   wa_source_map.ml
   from
   (yojson -> wa_source_map.yojson.ml)
   (-> wa_source_map.unsupported.ml)))
 (flags
  (:standard -w -7-37 -safe-string -open Js_of_ocaml_compiler)))
