(executables
 (names suffix extension)
 (libraries)
 (modes js))

(rule
 (target suffix.referencejs)
 (deps suffix.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run node --experimental-wasm-stringref --experimental-wasm-gc ./suffix.bc.js))))

(rule
 (alias runtest)
 (deps suffix.reference suffix.referencejs)
 (action
  (diff suffix.reference suffix.referencejs)))

(rule
 (target extension.referencejs)
 (deps extension.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run node --experimental-wasm-stringref --experimental-wasm-gc ./extension.bc.js))))

(rule
 (alias runtest)
 (deps extension.reference extension.referencejs)
 (action
  (diff extension.reference extension.referencejs)))
