(executables
 (names floatarray)
 (libraries)
 (modes js))

(rule
 (target floatarray.referencejs)
 (deps floatarray.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run node --experimental-wasm-stringref --experimental-wasm-gc ./floatarray.bc.js))))

(alias
 (name runtest)
 (deps floatarray.referencejs))
