(executables
 (names test)
 (libraries)
 (modes js))

(rule
 (target test.referencejs)
 (deps test.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run node --experimental-wasm-stringref --experimental-wasm-gc --experimental-wasm-stack-switching ./test.bc.js))))

(rule
 (alias runtest)
 (deps test.reference test.referencejs)
 (action
  (diff test.reference test.referencejs)))
