(executables
 (names testmap testset)
 (libraries)
 (modes js))

(rule
 (target testmap.referencejs)
 (deps testmap.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run node --experimental-wasm-stringref --experimental-wasm-gc ./testmap.bc.js))))

(rule
 (alias runtest)
 (deps testmap.reference testmap.referencejs)
 (action
  (diff testmap.reference testmap.referencejs)))

(rule
 (target testset.referencejs)
 (deps testset.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run node --experimental-wasm-stringref --experimental-wasm-gc ./testset.bc.js))))

(rule
 (alias runtest)
 (deps testset.reference testset.referencejs)
 (action
  (diff testset.reference testset.referencejs)))
