(executables
 (names t01)
 (libraries str)
 (modes js))

(rule
 (target t01.referencejs)
 (deps t01.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run node --experimental-wasm-stringref --experimental-wasm-gc --experimental-wasm-stack-switching ./t01.bc.js))))

(rule
 (alias runtest)
 (deps t01.reference t01.referencejs)
 (action
  (diff t01.reference t01.referencejs)))
