(executables
 (names apply revapply)
 (libraries)
 (modes js))

(rule
 (target apply.referencejs)
 (deps apply.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run node --experimental-wasm-stringref --experimental-wasm-gc --experimental-wasm-stack-switching ./apply.bc.js))))

(rule
 (alias runtest)
 (deps apply.reference apply.referencejs)
 (action
  (diff apply.reference apply.referencejs)))

(rule
 (target revapply.referencejs)
 (deps revapply.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run node --experimental-wasm-stringref --experimental-wasm-gc --experimental-wasm-stack-switching ./revapply.bc.js))))

(rule
 (alias runtest)
 (deps revapply.reference revapply.referencejs)
 (action
  (diff revapply.reference revapply.referencejs)))
