(library  (name wasm)
(public_name wasm_of_ocaml-wasm)
)

(include_subdirs unqualified)

(env
 (_
  (flags
   (-w +a-4-27-42-44-45-70 -warn-error +a-3))))

(subdir
 text
 (rule
  (target lexer.ml)
  (deps lexer.mll)
  (action
   (chdir
    %{workspace_root}
    (run %{bin:ocamllex} -ml -q -o %{target} %{deps}))))
 (ocamlyacc
  (modules parser)))
